--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,19 @@
+apipkg==1.5
 atomicwrites==1.1.5
 attrs==18.1.0
 certifi==2018.8.13
 chardet==3.0.4
 colorama==0.3.9
+execnet==1.5.0
 idna==2.7
 more-itertools==4.3.0
 pluggy==0.7.1
 py==1.5.4
 pytest==3.7.2
+pytest-forked==0.2
+pytest-parallel==0.0.2
+pytest-rerunfailures==4.1
+pytest-xdist==1.23.0
 requests==2.19.1
 selenium==3.14.0
 six==1.11.0
