--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
           name: run tests
           command: |
             . venv/bin/activate
-            pytest -v --reruns 2 --ignore Phase1 --ignore Phase2 --worker 4
+            pytest --workers 4 --tests-per-worker auto --reruns 2 -v --ignore Phase1 --ignore Phase2
       - store_artifacts:
           path: test-reports
           destination: test-reports
