--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/python:3.6.6-stretch-node-browsers
+      - image: selenium/standalone-chrome:3.1.0
     working_directory: ~/repo
     steps:
       - checkout
@@ -25,7 +25,6 @@ jobs:
           name: run tests
           command: |
             . venv/bin/activate
-            chmod 755 ./chromedriver/chromedriver
             pytest -n 3 --dist=loadscope -v --ignore Phase1 --ignore Phase2 --ignore Phase3
       - store_artifacts:
           path: test-reports
