--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: selenium/standalone-chrome:3.1.0
+      - image: circleci/python:3.6.6-stretch-node-browsers
     working_directory: ~/repo
     steps:
       - checkout
@@ -25,7 +25,7 @@ jobs:
           name: run tests
           command: |
             . venv/bin/activate
-            pytest -n 3 --dist=loadscope -v --ignore Phase1 --ignore Phase2 --ignore Phase3
+            pytest -n 3 --dist=loadscope -v --ignore Phase1 --ignore Phase2 --ignore Phase3 --driver Chrome --driver-path ./chromedriver/chromedriver
       - store_artifacts:
           path: test-reports
           destination: test-reports
