--- a/requirements.txt
+++ b/requirements.txt
@@ -10,9 +10,14 @@ more-itertools==4.3.0
 pluggy==0.7.1
 py==1.5.4
 pytest==3.7.2
+pytest-base-url==1.4.1
 pytest-forked==0.2
+pytest-html==1.19.0
+pytest-metadata==1.7.0
 pytest-parallel==0.0.2
 pytest-rerunfailures==4.1
+pytest-selenium==1.14.0
+pytest-variables==1.7.1
 pytest-xdist==1.23.0
 requests==2.19.1
 selenium==3.14.0
