--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
           command: |
             . venv/bin/activate
             chmod 755 ./Phase4/chromedriver/chromedriver
-            pytest -v --ignore Phase1 --ignore Phase2 --ignore Phase3 --ignore Phase4 --driver Chrome --driver-path ./Phase4/chromedriver/chromedriver --alluredir ./pytest-reports ./allure-2.7.0/bin/allure generate generate
+            pytest -v --ignore Phase1 --ignore Phase2 --ignore Phase3 --ignore Phase4 --driver Chrome --driver-path ./Phase4/chromedriver/chromedriver --alluredir ./pytest-reports ./allure-2.7.0/bin/allure generate
       - store_artifacts:
           path: allure-reports
           destination: allure-reports
