--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,8 +28,9 @@ jobs:
           command: |
             . venv/bin/activate
             ls
+            ls Phase5
             chmod -R 777 ./Phase5/chromedriver
-            pytest -v --ignore Phase1 --ignore Phase2 --ignore Phase3 --ignore Phase4 --driver Chrome --alluredir=./pytest_reports ./allure-2.7.0/bin/allure generate -c
+            pytest -v --driver Chrome --alluredir=./pytest_reports ./allure-2.7.0/bin/allure generate -c --ignore Phase1 --ignore Phase2 --ignore Phase3 --ignore Phase4  
       - store_artifacts:
           path: allure-reports
           destination: allure-reports
