--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ jobs:
             ls
             pytest -v --driver Chrome --driver-path ./chromedriver/chromedriver --alluredir=./pytest_report
             cd ..
-            ./allure-2.7.0/bin/allure generate -c  
+            ./allure-2.7.0/bin/allure generate -c ./Phase5/pytest_report  
       - store_artifacts:
           path: allure-reports
           destination: allure-reports
