--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,8 +29,8 @@ jobs:
             . venv/bin/activate
             chmod -R 777 ./Phase5/chromedriver
             chmod -R 777 ./allure-2.7.0/bin/
-            pytest -v --driver Chrome --driver-path ./Phase5/chromedriver/chromedriver --alluredir=./pytest_report
-            ./allure-2.7.0/bin/allure generate -c 
+            pytest -v --driver Chrome --driver-path ./Phase5/chromedriver/chromedriver --alluredir=./pytest_report --ignore Phase1 --ignore Phase2 --ignore Phase3 --ignore Phase4
+            ./allure-2.7.0/bin/allure generate -c
       - store_artifacts:
           path: allure-reports
           destination: allure-reports
