--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
           name: run tests
           command: |
             . venv/bin/activate
-            chmod -R 775 ./drv
+            chmod -R 777 ./Phase5/chromedriver/
             chmod -R 777 ./allure-2.7.0/bin/
             pytest -v --driver Chrome --alluredir=./pytest_report --ignore Phase1 --ignore Phase2 --ignore Phase3 --ignore Phase4
             ./allure-2.7.0/bin/allure generate -c
