--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,8 +29,8 @@ jobs:
             . venv/bin/activate
             chmod -R 777 ./Phase5/chromedriver/
             chmod -R 777 ./allure-2.7.0/bin/
-            pytest -v --driver Chrome --alluredir=./pytest_report --ignore Phase1 --ignore Phase2 --ignore Phase3 --ignore Phase4
+            pytest -v -n 3 --dist=loadscope --driver Chrome --reruns 2 --alluredir=./pytest_report --ignore Phase1 --ignore Phase2 --ignore Phase3 --ignore Phase4
             ./allure-2.7.0/bin/allure generate -c
       - store_artifacts:
-          path: allure-reports
-          destination: allure-reports
+          path: allure-report
+          destination: allure-report
