--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
             . venv/bin/activate
             chmod -R 777 ./Phase5/chromedriver/
             chmod -R 777 ./allure-2.7.0/bin/
-            pytest -v -n 2 --dist=loadscope --driver Chrome --reruns 2 --alluredir=./pytest_report --ignore Phase1 --ignore Phase2 --ignore Phase3 --ignore Phase4
+            pytest -v --driver Chrome --reruns 2 --alluredir=./pytest_report --ignore Phase1 --ignore Phase2 --ignore Phase3 --ignore Phase4
             ./allure-2.7.0/bin/allure generate -c
       - store_artifacts:
           path: allure-report
