--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
             . venv/bin/activate
             chmod -R 777 ./Phase5/chromedriver/
             chmod -R 777 ./allure-2.7.0/bin/
-            pytest -n 3 --dist=loadscope -v --driver Chrome --reruns 2 --alluredir=./allure-results --ignore Phase1 --ignore Phase2 --ignore Phase3 --ignore Phase4
+            pytest -n 3 --dist=loadscope -v --driver Chrome --reruns 2 --alluredir=./allure-results --ignore Phase1 --ignore Phase2 --ignore Phase3 --ignore Phase4 --ignore Phase5
             ./allure-2.7.0/bin/allure generate -c
       - store_artifacts:
           path: allure-report
